src/test/deca/context/invalid/without_class/not_a_boolean_condition_if_int.deca
// Description:
//    Error : Condition should be a boolean, can not use int type for an if
//
// Result:
//    NOT_A_BOOLEAN_CONDITION: Expression \(.\)\+ is not a boolean expression
//    line 8
{
    if (1) {
        print("Should no enter in this section");
    }
}